--- a/gallery-sub-styles.css
+++ b/gallery-sub-styles.css
@@ -34,6 +34,7 @@ nav{
     display: inline;
     text-align: center;
     margin-top: 20px;
+    margin-bottom: 30px;
 }
 
 header{
@@ -49,8 +50,22 @@ header{
 .picture{
     grid-area: p;
     margin-right: 50px;
-    padding: 20px;
-    background-color: rgba(178, 223, 211, 0.178);
 }
 
 /* end grid */
+
+.picture{
+    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+}
+  
+/* Pre-render the bigger shadow, but hide it */
+.picture,::after {
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+  
+/* Transition to showing the bigger shadow on hover */
+.picture,::after {
+    opacity: 1;
+}
